--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,3 +17,10 @@ $custom-colors: (
 @import "../../node_modules/bootstrap/scss/variables";
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
+
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+body {
+  background-color: $background;
+  color: $text;
+}
