--- a/src/components/home/RestaurantDashboardComponent/RestaurantPastOrdersComponent/SingleRestaurantPastOrderComponent.css
+++ b/src/components/home/RestaurantDashboardComponent/RestaurantPastOrdersComponent/SingleRestaurantPastOrderComponent.css
@@ -27,3 +27,10 @@
     width: 25%;
   }
 }
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
