--- a/src/components/Home/RiderDashboardComponent/RiderAvailableOrdersComponent/SingleRiderAvailableOrderComponent.css
+++ b/src/components/Home/RiderDashboardComponent/RiderAvailableOrdersComponent/SingleRiderAvailableOrderComponent.css
@@ -1,36 +1,29 @@
 @media (max-width: 576px) {
-  .single-past-order {
+  .single-rider-available-order {
     width: 100%;
   }
 }
 
 @media (min-width: 768px) {
-  .single-past-order {
+  .single-rider-available-order {
     width: 45%;
   }
 }
 
 @media (min-width: 992px) {
-  .single-past-order {
+  .single-rider-available-order {
     width: 30%;
   }
 }
 
 @media (min-width: 1200px) {
-  .single-past-order {
+  .single-rider-available-order {
     width: 30%;
   }
 }
 
 @media (min-width: 1400px) {
-  .single-past-order {
+  .single-rider-available-order {
     width: 25%;
   }
-}
-
-.line-clamp {
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
 }
